@@ -1,4 +1,6 @@
 1.2.1 - TBD
+    * Removed global persistent skymap configuration option - skymap is now
+      strictly a per-scene setting
     * Fixed error causing the saveSnapshot setting to be ignored
     * Snapshots are now saved when the scene hits the SPP target
     * Fixed error in world size calculation (used for parallel projector ray
